# allocator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md
scripts/: generate_social_preview.py
src/allocator/: __init__.py  __main__.py  allocation.py  cli.py  config.py  keychain.py  model.py  optimize.py  render.py  settings.py  snapshot.py  withdrawal.py
src/allocator/sources/: __init__.py  base.py  coingecko.py  monarch.py  prices.py
tests/: conftest.py  test_allocation.py  test_cli.py  test_config.py  test_deposit.py  test_history.py  test_keychain.py  test_model.py  test_optimize.py  test_render.py  test_settings.py  test_snapshot.py  test_sources_coingecko.py  test_sources_monarch.py  test_whole_shares.py  test_withdrawal.py
